Quase terminando o conteúdo dos slides

--- a/fisl/17/heroku-confboilerplate/theme.css
+++ b/fisl/17/heroku-confboilerplate/theme.css
@@ -42,6 +42,10 @@
   line-height: 70px;
   padding: 0 80px;
 }
+.slide ol li,
+.slide ul li {
+  text-indent: 0;
+}
 #picture h2 {
   color: #FFF;
 }
