--- a/fisl/17/heroku-confboilerplate/theme.less
+++ b/fisl/17/heroku-confboilerplate/theme.less
@@ -30,7 +30,6 @@
 			text-decoration: none !important;
 		}
 	}
-
 }
 
 .fisl-logo {
@@ -57,6 +56,11 @@
 		font-size: 52px;
 		line-height: 70px;
 		padding: 0 80px;
+	}
+
+	ol li,
+	ul li {
+		text-indent: 0;
 	}
 }
 
